--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/nav_schedule"
-        android:name="com.sti.ppam.momadu.ui.gallery.GalleryFragment"
+        android:name="com.sti.ppam.momadu.ui.gallery.ScheduleFragment"
         android:label="@string/menu_schedule"
         tools:layout="@layout/fragment_schedule" />
 
