--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -76,4 +76,15 @@
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
+    <ImageView
+        android:id="@+id/ivNoSchedule"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/schedule_no_schedule"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/rvScheduleList"
+        app:layout_constraintEnd_toEndOf="@+id/rvScheduleList"
+        app:layout_constraintStart_toStartOf="@+id/rvScheduleList"
+        app:layout_constraintTop_toTopOf="@+id/rvScheduleList" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
