--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,16 +5,23 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
-        <item
             android:id="@+id/nav_schedule"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/schedule"
             android:title="@string/menu_schedule" />
         <item
             android:id="@+id/nav_finance"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/dollar"
             android:title="@string/menu_finance" />
+        <item
+            android:id=""
+            android:icon="@drawable/settings"
+            android:title="@string/menu_setting" />
+        <item
+            android:id=""
+            android:icon="@drawable/question"
+            android:title="@string/menu_FAQ" />
+        <item
+            android:icon="@drawable/info"
+            android:title="@string/menu_about" />
     </group>
 </menu>
