--- a/app/src/main/res/layout/firstpage.xml
+++ b/app/src/main/res/layout/firstpage.xml
@@ -7,7 +7,7 @@
     tools:layout_editor_absoluteY="81dp" >
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/splashBG"
         android:layout_width="740dp"
         android:layout_height="1148dp"
         app:srcCompat="@drawable/yes"
@@ -15,20 +15,24 @@
         tools:layout_editor_absoluteY="-209dp" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/splashLogo"
         android:layout_width="331dp"
         android:layout_height="313dp"
-        app:srcCompat="@drawable/logo_new"
-        tools:layout_editor_absoluteX="40dp"
-        tools:layout_editor_absoluteY="144dp" />
+        android:layout_marginTop="150dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_new" />
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="337dp"
-        android:layout_height="212dp"
+        android:id="@+id/splashText"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
         android:text="M O M A D U"
         android:textSize="150px"
-        tools:layout_editor_absoluteX="59dp"
-        tools:layout_editor_absoluteY="479dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/splashLogo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
