--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,14 +15,15 @@
             android:icon="@drawable/dollar"
             android:title="@string/menu_finance" />
         <item
-            android:id=""
+            android:id="@+id/nav_setting"
             android:icon="@drawable/settings"
             android:title="@string/menu_setting" />
         <item
-            android:id=""
+            android:id="@+id/nav_faq"
             android:icon="@drawable/question"
             android:title="@string/menu_FAQ" />
         <item
+            android:id="@+id/nav_about"
             android:icon="@drawable/info"
             android:title="@string/menu_about" />
     </group>
