--- a/app/src/main/res/layout/firstpage.xml
+++ b/app/src/main/res/layout/firstpage.xml
@@ -8,17 +8,22 @@
 
     <ImageView
         android:id="@+id/splashBG"
-        android:layout_width="740dp"
-        android:layout_height="1148dp"
-        app:srcCompat="@drawable/yes"
-        tools:layout_editor_absoluteX="-165dp"
-        tools:layout_editor_absoluteY="-209dp" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/yes" />
 
     <ImageView
         android:id="@+id/splashLogo"
         android:layout_width="331dp"
         android:layout_height="313dp"
         android:layout_marginTop="150dp"
+        android:layout_marginBottom="257dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="200dp"
         android:text="M O M A D U"
-        android:textSize="150px"
+        android:textSize="58sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
