--- a/app/src/main/res/layout/fragment_finance.xml
+++ b/app/src/main/res/layout/fragment_finance.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.slideshow.SlideshowFragment">
+    tools:context=".ui.slideshow.FinanceFragment">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
@@ -108,7 +108,7 @@
         app:layout_constraintTop_toBottomOf="@+id/financeCategory6" />
 
     <ImageButton
-        android:id="@+id/imageView4"
+        android:id="@+id/buttonIncome"
         android:layout_width="84dp"
         android:layout_height="73dp"
         android:src="@drawable/add"
@@ -120,7 +120,7 @@
         app:layout_constraintTop_toTopOf="@+id/splashBG" />
 
     <ImageButton
-        android:id="@+id/imageView5"
+        android:id="@+id/buttonExpense"
         android:layout_width="84dp"
         android:layout_height="73dp"
         android:src="@drawable/minus"
@@ -132,7 +132,7 @@
         app:layout_constraintTop_toTopOf="@+id/splashBG" />
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/financeOverviewBackground"
         android:layout_width="381dp"
         android:layout_height="193dp"
         android:layout_marginTop="25dp"
@@ -145,12 +145,13 @@
         android:id="@+id/dateView3"
         android:layout_width="204dp"
         android:layout_height="28dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="16dp"
         android:gravity="center_horizontal"
         android:text="Monday, 22 Maret 2021"
         android:textAlignment="center"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -164,8 +165,8 @@
         android:text="Balance"
         android:textColor="#C4C4C4"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView7"
-        app:layout_constraintTop_toTopOf="@+id/imageView7" />
+        app:layout_constraintStart_toStartOf="@+id/financeOverviewBackground"
+        app:layout_constraintTop_toTopOf="@+id/financeOverviewBackground" />
 
     <TextView
         android:id="@+id/textView4"
@@ -177,8 +178,8 @@
         android:text="Rp 50,000"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView7"
-        app:layout_constraintTop_toTopOf="@+id/imageView7" />
+        app:layout_constraintEnd_toEndOf="@+id/financeOverviewBackground"
+        app:layout_constraintTop_toTopOf="@+id/financeOverviewBackground" />
 
     <TextView
         android:id="@+id/textView6"
@@ -189,7 +190,7 @@
         android:text="Rp100,000"
         android:textColor="#FFFFFF"
         android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView7"
+        app:layout_constraintStart_toStartOf="@+id/financeOverviewBackground"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <TextView
@@ -202,7 +203,7 @@
         android:text="Income"
         android:textColor="#C4C4C4"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView7"
+        app:layout_constraintStart_toStartOf="@+id/financeOverviewBackground"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
@@ -215,7 +216,7 @@
         android:text="Expense"
         android:textColor="#C4C4C4"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView7"
+        app:layout_constraintStart_toStartOf="@+id/financeOverviewBackground"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
@@ -227,7 +228,7 @@
         android:text="Rp50,000"
         android:textColor="#FFFFFF"
         android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView7"
+        app:layout_constraintStart_toStartOf="@+id/financeOverviewBackground"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <ImageView
@@ -239,7 +240,7 @@
         android:layout_marginTop="32dp"
         android:src="@drawable/bill"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
+        app:layout_constraintTop_toBottomOf="@+id/financeOverviewBackground" />
 
     <ImageView
         android:id="@+id/financeCategory2"
@@ -249,7 +250,7 @@
         android:src="@drawable/car"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
+        app:layout_constraintTop_toBottomOf="@+id/financeOverviewBackground" />
 
     <ImageView
         android:id="@+id/financeCategory3"
@@ -260,7 +261,7 @@
         android:layout_marginRight="32dp"
         android:src="@drawable/clothing"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
+        app:layout_constraintTop_toBottomOf="@+id/financeOverviewBackground" />
 
     <ImageView
         android:id="@+id/financeCategory4"
@@ -277,7 +278,7 @@
         android:id="@+id/imageView15"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="12dp"
         android:layout_marginRight="12dp"
         android:src="@drawable/left_arrow"
@@ -290,7 +291,7 @@
         android:layout_height="15dp"
         android:layout_marginStart="12dp"
         android:layout_marginLeft="12dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="20dp"
         android:src="@drawable/right_arrow"
         app:layout_constraintStart_toEndOf="@+id/dateView3"
         app:layout_constraintTop_toTopOf="parent" />
