--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,15 +6,75 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/right_arrow"
+        app:layout_constraintStart_toEndOf="@id/dateView5"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/financeOverviewBackground3"
+        android:layout_width="381dp"
+        android:layout_height="93dp"
+        android:layout_marginTop="24dp"
+        android:src="@drawable/recatngle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dateView5" />
+
     <TextView
-        android:id="@+id/today_reminders_label"
+        android:id="@+id/dateView5"
+        android:layout_width="204dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center_horizontal"
+        android:text="Monday, 22 Maret 2021"
+        android:textAlignment="center"
+        android:textSize="17sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
+        android:src="@drawable/left_arrow"
+        app:layout_constraintEnd_toStartOf="@id/dateView5"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/home_today"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Balance"
+        android:textColor="#C4C4C4"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/financeOverviewBackground3"
+        app:layout_constraintStart_toStartOf="@id/financeOverviewBackground3"
+        app:layout_constraintTop_toTopOf="@id/financeOverviewBackground3" />
 
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
+        android:text="Rp 50,000"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="@+id/financeOverviewBackground3"
+        app:layout_constraintEnd_toEndOf="@id/financeOverviewBackground3"
+        app:layout_constraintTop_toTopOf="@id/financeOverviewBackground3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
